# mkauthlist

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: python-package.yml
data/: aastex61.cls  author_order.csv  example_author_list.csv  order.csv
mkauthlist/: __init__.py  _version.py  mkauthlist.py
tests/: test.py  test_authlist.py  test_journals.py
