# For PyPi
[metadata]
description-file = README.rst

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = mkauthlist/_version.py
versionfile_build = mkauthlist/_version.py
tag_prefix = v
parentdir_prefix = mkauthlist-
